# Encryption-Algorithm

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  encryption_algorithm_docs.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: ci.yml
Schema/: README.md  demo-result.schema.json  encrypted-package.schema.json  lesson.schema.json
docs/adr/: 0001-local-fixtures-and-narrow-safe-api.md
src/feltcrypto/: __init__.py  __main__.py  cli.py  errors.py  fixtures.py  foundations.py  models.py  randomness.py  registry.py  safe_api.py
src/feltcrypto/weak/: __init__.py  block_modes.py  classical.py  integrity.py  randomness_failures.py  sha1.py  xor.py
tests/: test_api_surface.py  test_block_modes.py  test_classical_and_xor.py  test_classical_exhaustive.py  test_cli_exhaustive.py  test_errors_and_models.py  test_fixtures.py  test_foundations.py  test_integrity_and_randomness.py  test_package_init.py  test_properties.py  test_properties_extended.py  test_registry_and_cli.py  test_safe_api.py  test_schema_documents.py  test_sha1_educational.py  test_xor_exhaustive.py
