[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "feltcrypto"
version = "0.1.6"
description = "A local, academic cryptography failure-mode teaching library"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Princeton Afeez" }]
keywords = ["cryptography", "education", "security", "teaching"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Education",
]
dependencies = ["cryptography>=43"]

[project.urls]
Homepage = "https://github.com/PrincetonAfeez/Encryption-Algorithm"
Repository = "https://github.com/PrincetonAfeez/Encryption-Algorithm"
Changelog = "https://github.com/PrincetonAfeez/Encryption-Algorithm/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "hypothesis>=6",
    "jsonschema>=4",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-cov>=5",
    "ruff>=0.8",
]

# Version ranges above define package compatibility. Reproducible installs use
# pip-compile lockfiles: requirements.in → requirements.txt and
# requirements-dev.in → requirements-dev.txt (pinned with hashes).

[project.scripts]
feltcrypto = "feltcrypto.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
feltcrypto = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "C4", "E", "F", "I", "PIE", "PT", "RUF", "SIM", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
explicit_package_bases = true
packages = ["feltcrypto"]

[tool.coverage.run]
source = ["feltcrypto"]
omit = ["*/__main__.py"]

[tool.coverage.report]
fail_under = 99
exclude_also = ["if __name__ == .__main__.:"]
